finalized exception handling and also added base path
